--- a/app/src/main/res/layout/activity_card_view_aja.xml
+++ b/app/src/main/res/layout/activity_card_view_aja.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".CardViewAja">
 
     <android.support.v7.widget.CardView
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
-        app:cardElevation="10dp">
+        app:cardElevation="10dp"
+        android:layout_marginBottom="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/mbamia" />
+                android:src="@drawable/danautoba" />
 
             <TextView
                 android:id="@+id/tvNama"
@@ -31,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="2"
                 android:padding="5dp"
-                android:text="@string/judulmia"
+                android:text="@string/judul1"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
@@ -39,11 +40,37 @@
                 android:id="@+id/tvIsi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:ellipsize="end"
                 android:maxLines="3"
-                android:padding="5dp"
-                android:text="@string/isimia"
+                android:paddingLeft="5dp"
+                android:text="@string/isi1"
                 android:textSize="15sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="right">
+
+                <Button
+                    android:id="@+id/btnShare"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:text="Share" />
+
+                <Button
+                    android:id="@+id/btnVisit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:text="More" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
