--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/rvAja"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        >
 
     </android.support.v7.widget.RecyclerView>
     
